# easy-extension

./: .gitignore  README.md  easy_extension.py
example/: CMakeLists.txt  ExampleInterface.hpp  ExampleInterfaceHandler.hpp  main.py
templates/: api.template  easy_extension.template  include.template  method.template
